--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>NutriFit - Feedback page</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="icon" href="./logo.png">
 </head>
 <body>
     <nav>
